tests/cases/fail/test_arrayslice.nr
//@ error: Expected [i32; 2], got [i32]
proc expect_slice(xs: [i32]) {}
proc expect_array2(xs: [i32; 2]) {}

@export
proc main() i32 {
    let xs: [i32; 2] = [0, 1];
    let ys: [i32] = [2, 3];

    // can be coerced
    expect_slice(xs);

    // can not be coerced
    expect_array2(ys);

    return 0;
}